--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![contributions welcome](man/figures/contributions-welcome-brightgreen.svg)](https://github.com/yh202109/mtb/issues)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
 This is a collection of functions that can be used in 
@@ -23,6 +24,12 @@ This is a collection of functions that can be used in
 (3) aiding figure axis settings
 
 ## Installation
+
+You can install the newest version of mtb like so:
+
+``` r
+install.packages('yh202109/mtb')
+```
 
 You can install the development version of mtb like so:
 
