--- a/README.Rmd
+++ b/README.Rmd
@@ -11,24 +11,26 @@ knitr::opts_chunk$set(
 )
 ```
 
-# mtb - Toolkit for time related data presentation and adding colors to Markdown files
+# mtb - Toolkit for Assisting Kitchen and Garden Projects 
 
 <!-- badges: start -->
-[![contributions welcome](man/figures/contributions-welcome-brightgreen.svg)](https://github.com/yh202109/mtb/issues)
+[![CRAN status](https://www.r-pkg.org/badges/version/mtb)](https://CRAN.R-project.org/package=mtb)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-This is a collection of functions that can be used in 
-(1) time-related data presentation; 
-(2) components aiding *Markdown* or *R shiny* file editing; 
-(3) aiding figure axis settings
+The purpose of this package is to share a collection of functions the author wrote during weekends for managing
+kitchen and garden tasks, e.g. making plant growth charts or Thanksgiving kitchen schedule charts, etc. 
+Functions might include but not limited to:
+(1) aiding summarizing time related data; 
+(2) generating axis transformation from data; and
+(3) aiding `Markdown` (with `HTML` output) and `Shiny` files editing.
 
 ## Installation
 
 You can install the newest version of mtb like so:
 
 ``` r
-install.packages('yh202109/mtb')
+install.packages('mtb')
 ```
 
 You can install the development version of mtb like so:
@@ -75,6 +77,6 @@ add_colored_box(type='yellow-warning', info='Here is the warning message.')
 # Warranty and Disclaimer
 
 ```{r, echo=FALSE}
-add_colored_str('THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY.', color=c(0,0,90), bgcolor=c(0,0,25), bold=TRUE)
+mtb::add_colored_box(type='blue-default', width=0.95, label='Important', info='THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY.')
 ```
 
