--- a/vignettes/vignette_mtb_timerelated.Rmd
+++ b/vignettes/vignette_mtb_timerelated.Rmd
@@ -50,7 +50,7 @@ The `time_plot_event()` function creates a simplified timeline plot.
 
 ```{r}
 dt = data.frame( id=c(rep('Sous Chef',3), rep('Both',3), rep('Chef',4)), idn=c(rep(1,3),rep(-1,3), rep(2,4)), start=1800*c(0,1,2, 0.5, 1.2, 3, 1,2,3,4), end=1800*c(3.5,NA,3, 2, 6, NA, 2,3.5,3, 3.5),
-label=c('Turkey', 'Watch Temp', 'Gravy', 'Stuffing', 'Whipped Cream', 'Cookie', 'Cranberry', 'Potato', 'Green Bean', 'Pumpkin Pie'), type=c('b', 'p', 'i','i','p','p','p','b','i','i' ) )
+label=c('Turkey', 'Watch Temp', 'Gravy', 'Stuffing', 'Whipped Cream', 'Cookie', 'Cranberry', 'Potato', 'Green Bean', 'Pumpkin Pie'), labelend=c('', '', '?', ')', 'not shown', '', '', '', '||', ''), type=c('b', 'p', 'i','i','p','p','p','b','i','i' ) )
 dt[1:5,]
 ```
 
@@ -64,5 +64,3 @@ However,  to avoid reversed interval like `event-10`, the input data set should 
 ```{r}
 time_plot_event( dt, compact=TRUE )
 ```
-
-
